# cs224n_winter2025_solutions

./: README.md  main.py  pyproject.toml
solutions/: assignment1-solution.ipynb  assignment2-solution.md  assignment3-solution.md  assignment4-solution.md
